2018-11-08  Richard Biener  <rguenther@suse.de>

PR tree-optimization/87929
	* tree-complex.c (expand_complex_comparison): Clean EH.

	* gcc.dg/pr87929.c: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@265912 138bc75d-0d04-0410-961f-82ee72b054a4